--- a/example/index.html
+++ b/example/index.html
@@ -22,66 +22,72 @@
 
 	<script>
 	$(document).ready(function() {
-	  $('#map').usmap({
-			// 'country': 'CA',
-	    'stateSpecificStyles': {
-	      'AK' : {fill: '#f00'}
-	    },
-	    'stateSpecificHoverStyles': {
-	      'HI' : {fill: '#ff0'}
-	    },
+		var map;
+		$("ul li a").on("click", function (event){
+			var country = $(this).attr("data-map");
+			console.log(country);
+			$('#map3').empty();
+			$('#map3').append('<div id="map" style="height: 300px">hello</div>')
 
-	    'mouseoverState': {
-	      'HI' : function(event, data) {
-	        //return false;
-	      }
-	    },
+			 if (map !== undefined)
+			 	console.log(map.getPaper);
 
+			map = $('#map').usmap({
+					country: country,
+					stateStyles: { fill: "#187d91", stroke: "#000", "stroke-width": 1 },
+					stateHoverStyles: { fill: " #f1c40f" },
+					showLabels: true
+				});
+			event.preventDefault();
+		});
 
-	    'click' : function(event, data) {
-	      $('#alert')
-	        .text('Click '+data.name+' on map 1')
-	        .stop()
-	        .css('backgroundColor', '#ff0')
-	        .animate({backgroundColor: '#ddd'}, 1000);
-	    }
-	  });
-
-	  // $('#map2').usmap({
-	  //   'stateStyles': {
-	  //     fill: '#025',
-	  //     "stroke-width": 1,
-	  //     'stroke' : '#036'
-	  //   },
-	  //   'stateHoverStyles': {
-	  //     fill: 'teal'
-	  //   },
+		// $('#map1').usmap({
+		// 	stateStyles: { fill: "#187d91", stroke: "#000", "stroke-width": 1 },
+		// 	stateHoverStyles: { fill: " #f1c40f" },
+		// 	showLabels: true
+		// });
 		//
-	  //   'click' : function(event, data) {
-	  //     $('#alert')
-	  //       .text('Click '+data.name+' on map 2')
-	  //       .stop()
-	  //       .css('backgroundColor', '#af0')
-	  //       .animate({backgroundColor: '#ddd'}, 1000);
-	  //   }
-	  // });
-		//
-	  // $('#over-md').click(function(event){
-	  //   $('#map').usmap('trigger', 'MD', 'mouseover', event);
-	  // });
-		//
-	  // $('#out-md').click(function(event){
-	  //   $('#map').usmap('trigger', 'MD', 'mouseout', event);
-	  // });
+		// $('#map2').usmap({
+		// 	country: 'CA',
+		// 	stateStyles: { fill: "#187d91", stroke: "#000", "stroke-width": 1 },
+		// 	stateHoverStyles: { fill: " #f1c40f" },
+		// 	showLabels: true
+		// });
+		// $('#map3').usmap({
+		// 	country: 'UK',
+		// 	stateStyles: { fill: "#187d91", stroke: "#000", "stroke-width": 1 },
+		// 	stateHoverStyles: { fill: " #f1c40f" },
+		// 	showLabels: true,
+		// 	'click' : function(event, data) {
+		// 		$('#alert')
+		// 				.text('Click '+data.name+' on map 1')
+		// 				.stop()
+		// 				.css('backgroundColor', '#ff0')
+		// 				.animate({backgroundColor: '#ddd'}, 1000);
+		// 	}
+		// });
+
+		// $('#map4').usmap({
+		// 	country: 'AU',
+		// 	stateStyles: { fill: "#187d91", stroke: "#000", "stroke-width": 1 },
+		// 	stateHoverStyles: { fill: " #f1c40f" },
+		// 	showLabels: true
+		// });
+
 	});
 	</script>
 </head>
 <body>
   <div id="alert">Click alerts</div>
-
-  <div id="map" style="width: 930px; height: 630px; border: solid 3px red;"></div>
-
-  <button id="over-md">mouseover MD</button> <button id="out-md">mouseout MD</button>
-  <div id="map2" style="width: 300px; height: 300px;"></div>
+  <ul>
+	  <li><a href="#" data-map="US">United States</a></li>
+	  <li><a href="#" data-map="UK">United Kingdom</a></li>
+	  <li><a href="#" data-map="CA">Canada</a></li>
+	  <li><a href="#" data-map="AU">Australia</a></li>
+  </ul>
+<!--  <div id="map1" style="width: 380px; height: 200px; border: solid 3px red;"></div>-->
+<!--  <div id="map2" style="width: 380px; height: 300px; border: solid 3px red;"></div>-->
+  <div id="map3" style="width: 380px; height: 500px; border: solid 3px red;"></div>
+<!--  <div id="map4" style="width: 380px; height: 300px; border: solid 3px red;"></div>-->
 </body>
 </html>
